# lakebase-ops-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ENHANCED_PROMPT.md  PRD_V2_ARCHITECTURE.md  README.md  databricks.yml  deploy_and_test.py  main.py  pyproject.toml  requirements.txt  test_assessment.py
.agent-reports/: 00_lakebase_api_docs.md  01_repo_architecture.md  02_code_quality.md  03_data_integration.md  04_slides_analysis.md  05_design_doc_1.md  06_design_doc_2.md  07_jira_epic.md  08_jira_board.md  09_gap_analysis.md  10_implementation_plan.md  12_deployment_report.md  13_post_deploy_config.md  14_pr_conflict_analysis.md  raw_design_doc_1.txt  raw_design_doc_2.txt  raw_slides_content.txt  ws1_security_changes.md  ws2_backend_changes.md  ws3_frontend_changes.md  ws4_agents_changes.md  ws5_testing_changes.md  ws6_cicd_changes.md  ws7_config_changes.md  ws8_data_docs_changes.md
.github/workflows/: ci.yml
agents/: __init__.py  health_agent.py  performance_agent.py  provisioning_agent.py
agents/health/: __init__.py  agent.py  archival.py  connections.py  lakehouse_sync.py  monitoring.py  operations.py  sync.py
agents/performance/: __init__.py  agent.py  indexes.py  maintenance.py  metrics.py  optimization.py
agents/provisioning/: __init__.py  agent.py  assessment.py  branching.py  cicd.py  cosmos_adapter.py  governance.py  migration.py  policy_engine.py  project.py
app/: app.yaml  build.py  deploy_to_databricks.py  requirements.txt
app/backend/: main.py
app/backend/models/: __init__.py  agents.py  health.py  indexes.py  jobs.py  lakebase.py  metrics.py  operations.py  performance.py
app/backend/routers/: agents.py  assessment.py  health.py  indexes.py  jobs.py  lakebase.py  metrics.py  operations.py  performance.py
app/backend/services/: agent_service.py  lakebase_service.py  sql_service.py
app/backend/tests/: test_routers.py
app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
app/frontend/src/: App.tsx  main.tsx  theme.ts
app/frontend/src/__tests__/: AdoptionMetricsPage.test.tsx  AgentCard.test.tsx  App.test.tsx  Assessment.test.tsx  BranchesPage.test.tsx  DashboardPage.test.tsx  DataTable.test.tsx  KPICard.test.tsx  OperationsPage.test.tsx  PerformancePage.test.tsx  Sidebar.test.tsx  StatusBadge.test.tsx  setup.ts
app/frontend/src/components/: AgentCard.tsx  AnimatedLayout.tsx  CostEstimate.tsx  DataTable.tsx  ErrorBoundary.tsx  ExtensionMatrix.tsx  GanttChart.tsx  KPICard.tsx  MetricsChart.tsx  Sidebar.tsx  StatusBadge.tsx
app/frontend/src/hooks/: useApiData.ts
app/frontend/src/pages/: AdoptionMetrics.tsx  Agents.tsx  Assessment.tsx  Branches.tsx  Dashboard.tsx  Indexes.tsx  LiveStats.tsx  NotFound.tsx  Operations.tsx  Performance.tsx
cicd_templates/: .gitlab-ci.yml  Jenkinsfile  README.md  azure-pipelines.yml  post_schema_diff.py
cicd_templates/.circleci/: config.yml
config/: __init__.py  branch_policies.yaml  migration_profiles.py  pricing.py  pricing_fetcher.py  sensitive_columns.yaml  settings.py
dashboards/: lakebase_ops_dashboard.sql
demo/: agile_workflow_demo.py
docs/: CONTRIBUTING.md  DEPLOYMENT.md  naming-conventions.md
docs/playbook/: branch-based-development.md  dba-transition-guide.md
framework/: __init__.py  agent_framework.py
github_actions/: create_branch_on_pr.yml  delete_branch_on_pr_close.yml
hooks/: post-checkout.sh
jobs/: branch_manager_notebook.py  branch_reset_notebook.py  cold_archiver_notebook.py  cost_tracker_notebook.py  create_all_jobs.py  databricks_job_definitions.py  index_analyzer_notebook.py  masking_compliance_job.py  metric_collector_notebook.py  sync_validator_notebook.py  vacuum_scheduler_notebook.py
research/: .gitignore
sql/: __init__.py  assessment_queries.py  queries.py
templates/github-actions/: create_branch_on_pr.yml  delete_branch_on_pr_close.yml
tests/: conftest.py  test_assessment.py  test_framework.py  test_migration_workflow.py  test_sql_queries.py
tests/test_agents/: test_health_agent.py  test_performance_agent.py  test_provisioning_agent.py
tests/test_utils/: test_alerting.py  test_delta_writer.py  test_lakebase_client.py
utils/: __init__.py  alerting.py  blueprint_generator.py  databricks_auth.py  delta_writer.py  exceptions.py  lakebase_client.py  readiness_scorer.py
