[project]
name = "lakebase-ops-platform"
version = "1.0.0"
description = "Autonomous DBA platform for Databricks Lakebase"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.81.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psycopg[binary]>=3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.25.0",
    "ruff>=0.3.0",
]
aws = [
    "boto3>=1.34",
]

[tool.pytest.ini_options]
testpaths = ["app/backend/tests", "."]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
