# =============================================================================
# LakebaseOps Platform - Python Package & Tool Configuration
# Single source of truth for packaging, linting, formatting, and testing.
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Package Definition (GAP-030)
# =============================================================================
[project]
name = "lakebase-ops-platform"
version = "1.0.0"
description = "Autonomous DBA platform for Databricks Lakebase"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Databricks Field Engineering" },
]
keywords = ["databricks", "lakebase", "postgres", "dba", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "databricks-sdk>=0.81.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psycopg[binary]>=3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.25.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
aws = [
    "boto3>=1.34",
]

# =============================================================================
# Hatch build config
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["agents", "config", "framework", "jobs", "utils", "app/backend"]

# =============================================================================
# Ruff - Linting & Formatting (GAP-029)
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",   # allow assert in tests
    "S608",   # SQL injection (handled via allowlists; tracked in GAP-001)
    "T201",   # allow print() in notebooks/scripts
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"jobs/**/*.py" = ["T201", "F821", "S603", "S607"]  # dbutils + subprocess with static CLI args
"deploy_and_test.py" = ["T201", "N814", "N817", "S603", "S607"] # agent aliases + subprocess
"app/build.py" = ["S603", "S607"]       # subprocess calls with static args
"app/deploy_to_databricks.py" = ["S603", "S607"]
"cicd_templates/**/*.py" = ["S603", "S607"]
"utils/delta_writer.py" = ["S603", "S607"]
"utils/lakebase_client.py" = ["S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "config", "framework", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Pytest (GAP-029)
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", "app/backend/tests"]
addopts = "--tb=short -q --strict-markers"
markers = [
    "integration: marks tests requiring live Databricks connection",
    "slow: marks tests that take >10s",
]
asyncio_mode = "auto"

# =============================================================================
# Mypy - Type Checking (GAP-029)
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "app/frontend",
    "node_modules",
    "__pycache__",
]
